<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resto Apps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- String Tambahan -->
    <string name="order_remark">Please tap to order</string>
    <string name="btn_order">Order Food</string>
    <string name="title_activity_product">Product List</string>
    <string name="txtProduct">Product</string>
    <string name="txtHarga">Harga</string>
    <string name="title_activity_order">Order Cart</string>
    
    <string name="str_add">Add</string>
    
    <string name="str_jml_pesanan">Jumlah Pesanan</string>
    <string name="str_no_meja">No Meja</string>
    
    <string name="str_date_order">Tanggal Pesanan</string>
    <string name="str_jml_item_pesanan">Data Item yang dipesan :</string>

</resources>
