<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.apps.resto.OrderActivity" >

    <TextView
        android:id="@+id/txtDateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_date_order" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txtOrder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_jml_pesanan" />

        <TextView
            android:id="@+id/txtOrder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtOrder1"
            android:layout_marginTop="20dp"
            android:text="@string/str_no_meja" />

        <TextView
            android:id="@+id/txtOrder3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt1"
            android:layout_below="@+id/txt1"
            android:layout_marginTop="20dp"
            android:text="7" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtOrder2"
            android:layout_marginLeft="49dp"
            android:layout_toRightOf="@+id/txtOrder1"
            android:text="0" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txtOrdeerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_jml_item_pesanan" />
        
   	</RelativeLayout>

    <TextView
        android:id="@+id/txtObjDateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtDateOrder"
        android:layout_alignBottom="@+id/txtDateOrder"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/txtDateOrder"
        android:textStyle="bold"
        android:text="@string/str_date_order" />

</RelativeLayout>